codeforces/918/io/f.out
f.cc: In function ‘i64 inv_merge(std::vector<long int>&, std::vector<long int>&)’:
f.cc:61:7: error: ‘r’ was not declared in this scope
   61 |   if (r - l <= 1)
      |       ^
f.cc:61:11: error: ‘l’ was not declared in this scope
   61 |   if (r - l <= 1)
      |           ^
f.cc:63:12: error: ‘l’ was not declared in this scope
   63 |   int m = (l + r) >> 1;
      |            ^
f.cc:63:16: error: ‘r’ was not declared in this scope
   63 |   int m = (l + r) >> 1;
      |                ^
f.cc: In function ‘void solve()’:
f.cc:91:26: error: too many arguments to function ‘i64 inv_merge(std::vector<long int>&, std::vector<long int>&)’
   91 |   println("{}", inv_merge(b, tmp, 0, n));
      |                 ~~~~~~~~~^~~~~~~~~~~~~~
f.cc:60:5: note: declared here
   60 | i64 inv_merge(vector<i64>& a, vector<i64>& tmp) {
      |     ^~~~~~~~~
f.cc: At global scope:
f.cc:39:13: warning: ‘void YES()’ defined but not used [-Wunused-function]
   39 | static void YES() {
      |             ^~~
f.cc:35:13: warning: ‘void NO()’ defined but not used [-Wunused-function]
   35 | static void NO() {
      |             ^~
cc1plus: note: unrecognized command-line option ‘-Wno-sign-promotion’ may have been intended to silence earlier diagnostics

[code]: 1